# backend/domain/dto/read_llm_master_response.go
@@ -1,0 +1,6 @@
+package dto
+
+type ReadLlmMasterResponse struct {
+	LlmId       uint   `json:"llmId"`
+	DisplayName string `json:"displayName"`
+}
