# backend/routing.go
@@ -10,22 +10,25 @@ import (
 )
 
 type Routing struct {
-	Gin              *gin.Engine
-	Setting          setting.Setting
-	PromptController *controller.PromptController
-	UserController   *controller.UserController
+	Gin                 *gin.Engine
+	Setting             setting.Setting
+	PromptController    *controller.PromptController
+	UserController      *controller.UserController
+	LlmMasterController *controller.LlmMasterController
 }
 
 func NewRouting(
 	PromptController *controller.PromptController,
 	UserController *controller.UserController,
+	LlmMasterController *controller.LlmMasterController,
 	Setting setting.Setting,
 ) *Routing {
 	r := &Routing{
-		Gin:              gin.New(),
-		Setting:          Setting,
-		PromptController: PromptController,
-		UserController:   UserController,
+		Gin:                 gin.New(),
+		Setting:             Setting,
+		PromptController:    PromptController,
+		UserController:      UserController,
+		LlmMasterController: LlmMasterController,
 	}
 
 	r.Gin.Use(gin.Recovery())
@@ -43,6 +46,7 @@ func (r *Routing) setRouting() {
 		v1.GET("/prompts", func(c *gin.Context) { r.PromptController.ReadPrompts(c) })
 		v1.POST("/prompts", func(c *gin.Context) { r.PromptController.CreatePrompt(c) })
 		v1.POST("/users", func(c *gin.Context) { r.UserController.CreateUser(c) })
+		v1.GET("/llm-masters", func(c *gin.Context) { r.LlmMasterController.ReadLlmMasters(c) })
 	}
 }
 
